fixed the width of the modal on mobile screens and fixed the main grid on the tablet size

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -15,7 +15,8 @@
   background-color: white;
   padding: 20px;
   border-radius: 5px;
-  height: 75%;
+  width: 85%;
+  max-width: 1000px;
   aspect-ratio: 1/1;
   text-align: center;
   position: relative;
